# git-stat

./: .git-stat.yml  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  detail.csv  report.csv
.github/workflows/: action.yml
crates/cli/: Cargo.toml  main.rs
crates/cli/examples/: pd.rs  polars.rs
crates/config/: Cargo.toml  config.rs
crates/git/: Cargo.toml  commit.rs  lib.rs  repo.rs
crates/ui/: Cargo.toml  data.rs  lib.rs  tui.rs
examples/: args.rs  polars.rs
src/: config.rs  main.rs
src/config/: mod.rs
src/git/: commit.rs  mod.rs
src/tui/: mod.rs
src/ui/: data.rs  tui.rs
