[package]
name = "git-stat"
version = "0.1.0"
edition = "2021"

[[example]]
name = "args"

[dependencies]
git2 = "0.19.0"
regex = "1.5"
chrono = "0.4.38"
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.13"
ratatui = "0.27.0"
itertools = "0.13.0"
fakeit = "1.2.0"
unicode-width = "0.1.13"
clap = { version = "4.5.8", features = ["derive"] }
