[workspace]
members = ["crates/cli", "crates/config", "crates/git", "crates/ui"]
resolver = "1"


[workspace.dependencies]
clap = { version = "4.5.8", features = ["derive"] }
regex = "1.5"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.13"
serde_json = "1.0.120"
polars = { version = "0.41.3", features = ["lazy", "json", "regex", "strings"] }
env_logger = "0.11.3"
log = "0.4.22"
csv = "1.1.6"
